UMP-T-92 | optimize toList stream operations